# spaced

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  attribution.txt
.github/workflows/: ci.yml  package.yml
assets/: styles.json
assets/assets/: styles.json
assets/assets/particles/: exhaust.json  explode.json  powerup.json
assets/particles/: exhaust.json  explode.json  powerup.json
assets/worlds/: playground.json
src/: CMakeLists.txt  package.yml.in
src/android/: settings.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/res/: privacy_policy.txt
src/android/app/src/main/cpp/: CMakeLists.txt  main.cpp
src/android/gradle/: libs.versions.toml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/desktop/: CMakeLists.txt  main.cpp
src/spaced/: CMakeLists.txt  build_version.hpp.in
src/spaced/spaced/: async_exec.cpp  async_exec.hpp  game_driver.cpp  game_driver.hpp  game_title.hpp  prefs.cpp  prefs.hpp  resource_map.hpp  scene.cpp  scene.hpp  serializable.hpp  signal.hpp  spaced.cpp  spaced.hpp  string_map.hpp  util.cpp  util.hpp
src/spaced/spaced/assets/: asset_list.cpp  asset_list.hpp  asset_loader.cpp  asset_loader.hpp  asset_manifest.cpp  asset_manifest.hpp
src/spaced/spaced/game/: arsenal.cpp  arsenal.hpp  asset_list.cpp  asset_list.hpp  asset_loader.cpp  asset_loader.hpp  attractor.cpp  attractor.hpp  controller.hpp  damage.cpp  damage.hpp  damageable.hpp  enemy.cpp  enemy.hpp  enemy_death.hpp  enemy_factory.cpp  enemy_factory.hpp  enemy_factory_builder.cpp  enemy_factory_builder.hpp  enemy_spawner.cpp  enemy_spawner.hpp  game_save.cpp  game_save.hpp  gravitator.cpp  gravitator.hpp  health.cpp  health.hpp  hud.cpp  hud.hpp  instigator.hpp  motion.cpp  motion.hpp  player.cpp  player.hpp  player_controller.cpp  player_controller.hpp  powerup.cpp  powerup.hpp  scorer.hpp  shield.cpp  (+15 more)
src/spaced/spaced/game/controllers/: auto_controller.cpp  auto_controller.hpp  follow_controller.cpp  follow_controller.hpp  player_controller.cpp  player_controller.hpp
src/spaced/spaced/game/enemies/: basic_creep_factory.cpp  basic_creep_factory.hpp  creep.cpp  creep.hpp  creep_factory.cpp  creep_factory.hpp  gunner.cpp  gunner.hpp  gunner_base.cpp  gunner_base.hpp  trooper.cpp  trooper.hpp
src/spaced/spaced/game/powerups/: beam.cpp  beam.hpp  one_up.cpp  one_up.hpp  pu_base.cpp  pu_base.hpp  pu_beam.cpp  pu_beam.hpp
src/spaced/spaced/game/weapons/: gun_beam.cpp  gun_beam.hpp  gun_kinetic.cpp  gun_kinetic.hpp  projectile.cpp  projectile.hpp
src/spaced/spaced/scenes/: base.hpp  endless.cpp  endless.hpp  game.cpp  game.hpp  home.cpp  home.hpp  load_assets.cpp  load_assets.hpp  menu.cpp  menu.hpp
src/spaced/spaced/services/: audio.hpp  display.hpp  game_signals.hpp  gamepad_provider.hpp  layout.hpp  resources.hpp  scene_switcher.hpp  serializer.cpp  serializer.hpp  service.hpp  services.hpp  stats.cpp  stats.hpp  styles.cpp  styles.hpp
src/spaced/spaced/ui/: button.cpp  button.hpp  dialog.cpp  dialog.hpp  element.hpp  list_box.hpp  loading_screen.cpp  loading_screen.hpp  outline_quad.cpp  outline_quad.hpp  progress_bar.cpp  progress_bar.hpp  slider.cpp  slider.hpp  style.hpp  text.cpp  text.hpp  view.cpp  view.hpp  widget.hpp
tools/: build_release.cmake  format_code.sh  package_release.cmake
(+5 files in other folders)
